istio/02-L7_proxy_external_failover/00-proxier.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: httpproxy-se
spec:
  hosts:
    - service.ardikabs.com
  endpoints:
    - address: 3.1.234.199.nip.io
      locality: ap-southeast-1
    - address: 54.169.12.89.nip.io
      locality: ap-southeast-2
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpproxy-dr
spec:
  host: service.ardikabs.com
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        failover:
          - from: ap-southeast-1
            to: ap-southeast-2
    outlierDetection:
      consecutiveGatewayErrors: 3
      interval: 15s
      baseEjectionTime: 30s
    connectionPool:
      http:
        idleTimeout: 1s
    tls:
      mode: SIMPLE
