istio/02-L7_proxy_external_failover/01-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpproxy-vs
spec:
  hosts:
    - service.ardikabs.com
  gateways:
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
          uri:
            prefix: "/hoyohoyo"
      rewrite:
        uri: "/blackbox"
      route:
        - destination:
            host: service.ardikabs.com
            port:
              number: 443
      retries:
        attempts: 3
